fix game page getting squashed on mobile

--- a/static/css/game.css
+++ b/static/css/game.css
@@ -20,6 +20,7 @@
     border-right: none;
     border-bottom: none;
     height: min-content;
+    min-width: 500px;
 }
 
 .header {
